--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "Mean stack server boilerplate",
   "main": "./src/bin/www",
   "scripts": {
-    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/**/*.spec.js test/tests.js --timeout 10000 --exit",
-    "test:ti": "cross-env NODE_ENV=test mocha test/tests.js --timeout 10000 --exit",
-    "test:tu": "cross-env NODE_ENV=test mocha src/**/*.spec.js --timeout 10000 --exit",
+    "test": "npm run test:tu && npm run test:ti && istanbul-combine -d coverage -p summary -r html coverage/**/*.json",
+    "test:ti": "cross-env NODE_ENV=test nyc --report-dir coverage/ti --reporter=text --reporter=json mocha test/tests.js --timeout 10000 --exit",
+    "test:tu": "cross-env NODE_ENV=test nyc --report-dir coverage/tu --reporter=text --reporter=json mocha src/**/*.spec.js --timeout 10000 --exit",
     "dev": "cross-env NODE_ENV=development nodemon",
     "lint": "gulp lint",
     "doc": "gulp jsdoc",
@@ -69,6 +69,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-util": "^3.0.8",
     "istanbul": "^0.4.5",
+    "istanbul-combine": "^0.3.0",
     "jsdoc-http-plugin": "^0.3.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
