--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -6,7 +6,8 @@
     "prefer-destructuring": 0,
     "no-underscore-dangle": 0,
     "max-len": 0,
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "no-param-reassign": 0
   },
   "env": {
     "browser": true,
