--- a/server/test/.eslintrc
+++ b/server/test/.eslintrc
@@ -7,7 +7,8 @@
     "no-underscore-dangle": 0,
     "max-len": 0,
     "object-curly-newline": 0,
-    "no-unused-expressions": 0
+    "no-unused-expressions": 0,
+    "indent": 0
   },
   "env": {
     "node": true,
